--- a/app/views/courses/5/_course_condition.html.erb
+++ b/app/views/courses/5/_course_condition.html.erb
@@ -2,6 +2,25 @@
 <br><br>
 <div class="container-fluid">
 	<dl>
-		<dd>暂无素材</dd>
+		<dt>（1）校内实训基地</dt>
+    <dd>*电气接线与电子技术实训室<br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;用于电机原理，电机的起动、反转、制动、调速训练、电机控制电路装接类的基本技能训练<br> 
+        *机床电气控制与故障排除实训室 <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;机床排故综合技能实训，维修电工的考核培训   <br>  
+        *机电系统检测实验室  <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;传感器应用、系统检测反馈模块安装调试、信号分析<br> 
+        *液压气动控制实训室  <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;液压气动基本控制回路的基本技能训练<br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;液压气动实训室现有FESTO液压气动控制实训台5套，可以同时满足25人进行专业实训。<br> 
+        *PLC技术实训室 <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可编程序控制器技术训练
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PLC技术实训室和三菱公司联合建设，有各类PLC实训台20余台（套）和各种配套软件，可同时满足2个班的教学做一体化的教学要求。<br> 
+        *机电综合实训室  <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;认识自动线相关机电执行机构<br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;机电综合实训室现有自动流水线8套、模拟升降电梯2套、自研设备（机电控制仿真与开发平台）2套。<br> 
+        *工业机器人技术实训室  <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;机电控制技术综合应用技能<br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;除此之外，还有现代电气控制系统安装与调试设备、服务型机器人等实训设备。
+    </dd>
 	</dl>
 </div>
