--- a/app/views/courses/5/_course_policy.html.erb
+++ b/app/views/courses/5/_course_policy.html.erb
@@ -1,1 +1,162 @@
-暂无材料
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>特色与创新点</strong></a>
+<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>学生作品展示</strong></a>
+<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>学生竞赛</strong></a><br><br>
+  
+<div class="course-content-policy-div">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 我们的特色</p>
+    <div class="container-fluid">
+      <div id="myCarousel" class="course3 carousel slide" style="float:right;margin: 10px;">
+         <!-- 轮播（Carousel）指标 -->
+         <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+         </ol>
+         <!-- 轮播（Carousel）项目 -->
+         <div class="carousel-inner">
+            <div class="item active">
+               <%= image_tag("course_5/course5_1.jpeg") %>
+            </div>
+            <div class="item">
+               <%= image_tag("course_5/course5_2.jpeg") %>
+            </div>
+            <div class="item">
+               <%= image_tag("course_5/course5_6.jpeg") %>
+            </div>
+            <div class="item">
+               <%= image_tag("course_5/course5_8.jpeg") %>
+            </div>
+         </div>
+      </div>
+      <dd>
+        《机电控制技术综合应用》是机电类、电气类等专业的重要教学环节，各校在理论教学的教学改革作了不少尝试，但各学校针对该门课程实践类的教学改革尚不多见。我们认为，目前没有一本现成的教材能够涵盖这一课程的全部应用领域。因此，我们以工业机器人与自动生产线为综合训练载体，以传感器实训平台与维修电工各模块实训装置为基础训练载体。教材仅完成所必须的理论教学任务，以做到知识够用。而以实训指导资料（讲义、设计任务书、用户手册、说明书等）作为课程的重要承载媒介。
+      </dd>
+      <dt>1. 以工业机器人作为课程重要载体，实现校企共建工业机器人实训基地，以利课程教学标准与职业资格标准相融合</dt>
+      <dd>
+        校企合作共建校内、校外实践基地，为工学结合教学创造了良好的教学环境；校企合作共同制订的课程教学标准，融合了国家职业资格维修电工（四、三级）标准、行业（工业机器人编程与系统集成）资格的内容，符合高职生的培养目标。
+      </dd>
+      <dd>
+        以工业机器人技术实训基地为例，该实训基地包括两个实训室，一是我系与库卡机器人公司、北京竞业达公司共建，主体设备为3台5kg的KUKA工业机器人以及校企共同设计优化的外置操作控制面板，在确保安全的前提下达到与KUKA机器人培训中心完全一致的教学培训效果；一是我系与新时达机器人公司共建的完全模拟企业真实环境下的工业机器人实训室，为学生提供完全真实的工业机器人使用环境。
+      </dd>
+      <dd>
+        这两个实训室分别以世界著名品牌与国内知名品牌工业机器人为主体实训设备，能够囊括目前及在可预见的未来，机电一体化技术相关领域绝大多数工作任务。
+      </dd>
+      <dt>2. 获得行业企业授权，取得行业证书培训资质，并以行业证书培训内容与要求作为课程重要补充</dt>
+      <dd>
+        教学内容的选取以行业企业的需求和高职学生的培养目标为依据，由企业行业专家、课程开发专家、专职教师共同分析职业能力→确定能力目标→序化教学内容→形成项目模块。课程教学以项目分解岗位，以任务还原岗位，将能力指标始终贯穿于项目与任务之中，符合高职教育规律。
+      </dd>
+      <dd>
+        更重要的一点是我们得到上海新时达机器人公司授权，在我系挂牌成立新时达机器人公司上海工商学院培训中心，承接新时达公司部分客户培训与社会培训业务，并为学生提供获取行业证书所需要的教学培训，该教学培训内容也在本课程的实训环节中体现。因此可以做到完全跟进就业岗位要求。
+      </dd>
+      <dt>3. 与其他课程做到水乳交融，避免知识与能力碎片化，以学生掌握实用技能，达到岗位要求为目的</dt>
+      <dd>
+        本课程综合了电工电子、电机拖动、电力电子、交直流调速、可编程控制器、液压与气动等多门课程内容，所有这些内容均可以在本课程中得以体现，关键在于本课程与相关课程以及相关课程之间的有机结合。因此在教学与实践过程中，通过回顾相关课程所学的知识技能并加以综合利用，以岗位要求为能力导向，可以在潜移默化中促进学生所学知识技能的提高，达到综合检验的效果。
+      </dd>
+      <dt>4．新技术，新内容，不断优化课程的生态环境，博采众家所长，充分体现开放、优化、实时等特点</dt>
+      <dd>
+        机电一体化技术发展日新月异，而主讲教材内容的更新总是滞后于技术的发展，为了解决这一矛盾，我们利用自编讲议与指导书作为主讲教材的必要补充，并且为贯彻与岗位对接，引进企业培训教材与用户手册作为教学资料。因此该课程的课程体系充分体现了开放、优化、实时的特点。
+      </dd>
+      <dd>
+        开放的课程体系，让新技术、新设备和新工艺不断地充实教学内容和教学设备，主要体现在课程载体之一——工业机器人上。课程讲授按照循序渐进、先分后合、由易到难的原则，先从机电一体化控制系统的组成与简单应用开始，逐步过渡到简单的部分综合，再向系统综合与调试、故障排除前进。如我们最初制作的机械电气装置（爬杆机械），就是为了让学生更好地理解机械电气化与机电一体化的区别。我们已经连续制作了两年这样的装置，今年将制作一个模拟海上救生的机电装置。这些制作项目都是从英国机械工程师学会（IMechE）历年竞赛题目中引进的。这类制作让学生觉得好玩、好奇，从而有效地激发起学习兴趣，使课程的生态环境能够得到不断优化。
+      </dd>
+    </div>
+  </dl>
+</div>
+
+<div class=" course-content-policy-div" style="display: none;">
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_3.jpeg",width:"510", height:"350")%><br><br>
+        图（一）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_4.png",width:"510", height:"350")%><br><br>
+        图（二）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_5.png",width:"510", height:"350")%><br><br>
+          图（三）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_7.png",width:"510", height:"350")%><br><br>
+        图（四）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_9.jpg",width:"510", height:"350")%><br><br>
+       图（五）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_10.jpg",width:"510", height:"350")%><br><br>
+        图（六）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_11.jpg",width:"510", height:"350")%><br><br>
+          图（七）<br><br>
+        </div>
+        <div class="col-sm-6">
+           <%= image_tag("course_5/course5_12.jpg",width:"510", height:"350")%><br><br>
+           图（八）<br><br>
+        </div>
+      </div>
+    </div>
+</div>
+
+<div class=" course-content-policy-div" style="display: none;">
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s1.jpg",width:"510", height:"350")%><br><br>
+        图（一）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s2.jpg",width:"510", height:"350")%><br><br>
+        图（二）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s3.jpg",width:"510", height:"350")%><br><br>
+        图（三）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s4.jpg",width:"510", height:"350")%><br><br>
+        图（四）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s5.jpg",width:"510", height:"350")%><br><br>
+        图（五）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s6.jpg",width:"510", height:"350")%><br><br>
+        图（六）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s7.jpg",width:"510", height:"350")%><br><br>
+        图（七）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s8.jpg",width:"510", height:"350")%><br><br>
+        图（八）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s9.jpg",width:"510", height:"350")%><br><br>
+        图（九）<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s10.jpg",width:"510", height:"350")%><br><br>
+        图（十）<br><br>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-sm-6">
+          <%= image_tag("course_5/course5_s11.jpg",width:"510", height:"350")%><br><br>
+          图（十一）<br><br>
+        </div>
+        <div class="col-sm-6">
+           <%= image_tag("course_5/course5_s12.jpg",width:"510", height:"350")%><br><br>
+           图（十二）
+        </div>
+      </div>
+    </div>
+</div>
