--- a/app/views/courses/5/_course_setup.html.erb
+++ b/app/views/courses/5/_course_setup.html.erb
@@ -1,1 +1,28 @@
-暂无材料
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程设置</strong></a>
+<br><br>
+<div class="container-fluid course-content-step-div">
+  <dl>
+    <dt>1. 课程设计的理念</dt>
+    <dt>1）认识上的三个转变</dt>
+    <dd>从“知识本位”到"能力本位"的转变；<br>  从“以教师为中心”到“以学生为中心”的转变；<br>  从“学科标准”到“职业能力标准”的转变。</dd>
+    <dt>2）为能胜任就业岗位而学习</dt>
+    <dd>以机电控制技术与设备的工作过程作为本课程实训内容的学习过程，通过项目教学，培养学生的职业素质、团队精神和创新能力，综合专项技能、开启职业之门。</dd>
+    <dt>2. 课程设计思路</dt>
+    <dt>1）以工学结合为切入点，构建开放的课程生态环境，突出职业素质培养</dt>
+      <dd>（1）营造生产性的教学环境，通过行业、企业以及职教集团项目参与课程开发和实验实训设备的开发，使课程内容和校内实践设备符合企业实际生产需要；<br>
+      （2）教学过程从“学校”延伸到“企业”，通过下企业见习参观、半工半读、顶岗实习等环节，把课堂延伸到企业；<br>  
+      （3）开放的课程体系，让新技术、新设备和新工艺不断充实教学内容和教学设备，让专业教师与企业技术人员开展密切交流与合作，使课程的生态环境能够不断得到优化。</dd>
+    <dt>2）以达到岗位能力要求为目标，重构课程体系与内容，突出核心能力培养。</dt>
+      <dd>（1）从“任务与职业能力”分析出发，设定职业能力培养目标；以“工作过程”为主线，创设工作情景，结合职业技能证书考证与市、区两级职业技术竞赛，培养学生的专业技能和职业素质，提高学生的工作能力。<br>
+        （2）以“建构主义”为依据，为学生创设“在工作中学习的情境”，培养学生自主学习、自主解决问题、自主评价的能力，提高学生的学习积极性、主动性及其学习的成就感；<br>
+        （3）教学内容涵盖机电一体化技术专业毕业生所从事的主要技术岗位技能要素</dd>
+    <dt>3）以认识过程为基础，开展教学实践活动，促进学生全面发展。</dt>
+    <dd>（1）“学做练一体”教学模式<br>
+          集中教学时间，完成学习内容，学生边学习、边实践，学练交替，循环渐进，在实训环节使学生在“教、学、做”一体的教学环境下完成学习任务。<br>
+        （2）以工作任务驱动项目教学<br>
+          根据机电控制设备的工作过程和工作岗位知识、技能和素质要求，按照认知规律和学生特点，设计教学项目，从初步认识、基本操作、控制训练直到分析判断，由浅入 深、由表及里，实践、认识、再实践、再认识……不断深化提高。 <br>
+        （3）创造自主的学习氛围<br>
+            发挥实训小组（团队）的作用，对实训中的核心技能和难点，在互相帮助，自主学习的氛围中多重循环反复强化，为今后的职业发展打下基础。
+    </dd>
+  </dl>
+</div>
