--- a/app/views/courses/5/_course_team.html.erb
+++ b/app/views/courses/5/_course_team.html.erb
@@ -1,10 +1,84 @@
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>教学团队</strong></a>
 <br><br>
-<div class="row">
-  <div class="col-sm-12">
-    <% teacher_courses.each do |teacher_course|%>
-			<div class="col-sm-3 text-center" style="margin-bottom: 10px; float: right;"><%= image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).try(:url, :t_220_220))%>
-			</div>
-	  <% end %>
-	</div>
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_5/anquan.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">安全<small>（上海工商职业技术学院机电工程系）</small></h3>
+    <p style="margin:20px 0">课程负责人&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;教学主任、机电一体化技术专业主任</p>
+    <p style="margin:10px 0">
+    1992年7月-2007年1月 马鞍山钢铁股份有限公司自动化部、培训部 新建基础自动化、自动控制工程设计、技术改造等 项目设计、技术主管、职工培训等；
+    2007年2月至今 上海工商职业技术学院机电工程系教学主任、机电一体化技术专业主任 课程主讲、科研/教改项目开发、项目负责人<br>
+    主要成果：
+    课题名称：机电一体化技术系统仿真教学与创新型开发平台 来源：上海市教委重点科研项目 年限：2013 -2014 项目负责人 已结题；
+    技术服务：掘进机钻头逆向设计与制造 来源：嘉定经济开发区企业 独立完成；
+    技术培训：现场总线与工业网络;
+    上海市育才奖  2012年;
+    上海市高职高专机械类教师教学能力比赛三等奖 2012年;
+</p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_5/xumingcong.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">徐名聪<small>（上海工商职业技术学院机电工程系）</small></h3>
+    <p style="margin:20px 0">机电工程系主任</p>
+    <p style="margin:10px 0">
+      1982.6 ～2014.10  上海理工大学           教师   机械基础实验中心主任;
+      2014.10至今       上海工商职业技术学院   教师   机电工程系主任<br>
+      主要成果：
+      主编《机械基础实验教程》       中国计量出版社   2010;
+      参编《金属切削原理与刀具》     机械工业出版社   2012;
+      2009年获上海市教学成果三等奖;
+      2010年获上海理工大学教学质量优秀二等奖;
+      2013年获上海理工大学教学成果二等奖;
+    </p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_5/daiyiping.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">戴一平<small>（上海工商职业技术学院机电工程系）</small></h3>
+    <p style="margin:20px 0">外聘教师、专任教师、校外专家、专业带头人</p>
+    <p style="margin:10px 0">
+      2001-至今     上海工商职业技术学院机电工程系外聘教师、专任教师、校外专家、专业带头人<br>
+      主要成果:
+      《工业控制网络训练平台的开发及应用》   实验室研究与探索 1/2  ;
+      《可编程序控制器技术》（国家规划教材）  机械工业出版社  主编  ;
+      《可编程序控制器逻辑控制案例》      高等教育出版社 独立编著;
+    </p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_5/lihaigui.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">李海贵<small>（上海工商职业技术学院机电工程系）</small></h3>
+    <p style="margin:20px 0">实训教师</p>
+    <p style="margin:10px 0">
+      2010年—2013年  上海震旦职业学院   教育业  实训教师;
+      2014年至今     上海工商职业技术学院   教育业  实训教师<br>
+      主要成果
+      维修电工高级竞赛上海市二等奖、上海人保局、2014年;
+      维修电工高级竞赛上海市一等奖、上海人保局、2014年;
+      上海市五一劳动奖章、上海市总工会、2015年;
+    </p>
+  </div>
 </div>
