--- a/app/views/courses/5/_teach_content.html.erb
+++ b/app/views/courses/5/_teach_content.html.erb
@@ -1,1 +1,12 @@
-暂无材料
+<div class="container-fluid course-content-div">
+  <dt style="color:#5086C5">1.教学内容</dt>
+    <dd>1）了解机电一体化技术基本知识、机电控制设备基本结构、组成与功能，能够辨识机电控制设备各组成部分以及各自的功能，能够从易到难，从简单的生活用机电产品到工作母机对产品与设备的结构组成与功能进行分析；</dd>
+    <dd>2）掌握机电控制设备传感检测、控制、执行、动力源以及机械本体相关知识，了解机电一体化与机械电气化的区别，能够完成机械电气化装置制作，通过完成机电电气化装置制作掌握机电一体化与机械电气化的区别；</dd>
+    <dd>3）了解日常生活、工业企业与市政工程中常用的机电一体化装置与设备，通过每一类机电控制设备的典型案例教学，掌握操作机电控制设备所需的相关知识 能够在掌握机电控制设备的工作原理与流程的基础上，对各类机电设备进行基本操作，主要是自动生产线、数控机床、机器人等，包括启动、停止、停止后再启动的操作
+    </dd>
+    <dd>4）掌握典型机电控制设备机械安装位置和尺寸要求 能熟练地安装简单的机电控制设备，并使用工具对已安装的机械部分进行测量  </dd>
+    <dd>5）掌握传感检测部分工作原理与结构，能够判断传感检测部分类型、信号输入/输出形式、与控制部分的接口，并进行传感检测部分的拆装与调试、复装</dd>
+    <dd>6）掌握伺服与执行装置工作原理与结构，能够判断伺服或步进电机工作状况并进行拆卸与复装，能够对变频器或伺服装置进行设定与重启动，对夹持器或其他末端装置进行拆卸与复装；</dd>
+    <dd>7）掌握机电接口与人机接口信号传递类型与变换方式  能够判断机电接口与人机接口的信号传递与变换方式，能够对接口如ADC或DAC以及HMI进行拆卸与复装</dd>
+    <dd>8）掌握控制单元类型、工作原理与信号传递方式以及控制方式，能够读懂MCU、DSP、PLC、IPC、DCS、FCS等控制系统（或单元）控制拓扑图。</dd>
+</div>
