--- a/app/views/courses/5/_teach_effect.html.erb
+++ b/app/views/courses/5/_teach_effect.html.erb
@@ -1,1 +1,40 @@
-暂无材料
+<div class="course-content-effect-div">
+  <h4>白国振副教授（上海理工大学）</h4>
+  <p>在师资建设方面，该教学团队为上海市级教学团队，多名教师来自于企业，在行业内有较高的影响力；重视青年教师的培养，所有青年教师都有在国内外著名企业进修经历；课程负责人能力强，师资结构合理、专兼结合、人员稳定，教科研水平高，教学效果好。<br>在实践基地建设方面，建有上海市政府扶持资金支持的校内实训基地。 与上海汽车集团、上海电驱动公司等著名企业建立校外实践基地，较好地满足了机电控制类技术技能型人才的培养要求，基地整体水平在上海市处于领先地位。</p>
+  <h4>陈勇高级工程师（上海大学）</h4>
+  <p>课程组坚持“校企合作、工学结合”，实现了理论教学、实训操作和生产运用的有机结合，使学生今日所学即明日所用，实现学校与企业的零距离对接。历经多年建设，该课程拥有一支既具有丰富企业实践经验、又能钻研教学技术的“双师型”教学团队，该团队为上海市级教学团队，多年来一直在从事机电控制技术教学、研究与开发，在行业中有较高的影响。主讲教师经历、经验丰富，工作能力强，师资队伍结构合理，科研水平高，教学效果好。</p>
+</div>
+
+<div class="course-content-effect-div">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>行业企业专家评价（摘要）</p>
+    <div class="container-fluid">
+      <dt><h5 style="margin:20px 0">（1）上海汽车集团培训中心</h5></dt>
+      <dd>
+        我集团公司是上海工商职业技术学院的紧密合作单位，派专人参加学院《机电控制技术综合应用》课程建设，每年都接受该院学生的顶岗实习。该校学生职业素质高，技术能力强，能很快地适应机电控制系统的现场安装与调试及设备故障的排除，这充分说明学院《机电控制技术综合应用》的课程教学和训练是成功的。基于对该课程乃至该校机电工程系的认可，我集团公司已与机电工程系签订了订单班培训协议。
+      </dd>
+      <dt><h5 style="margin:20px 0">(2) 上海胜僖汽车配件有限公司 副总经理 王江</h5></dt>
+      <dd>
+        我单位与上海工商职业技术学院《机电控制技术综合应用》课程组多年来一直保持合作关系，同课程组教师合作进行技术开发，为公司解决许多技术难题。同时也参与课程建设工作、工学结合的指导工作。我公司每年都从该校机电类专业招聘多名机电控制技术岗位的毕业生，从这几年的实际情况看，该校学生上手快、动手能力强、安心工作，部分学生已成为公司各部门的骨干力量，从中也体现该校《机电控制技术综合应用》课程建设的成效。我单位已与机电一体化技术专业联合申报了上海市技师学院项目并已获得批准。
+      </dd>
+      <dt><h5 style="margin:20px 0">（3）上海汽车变速器有限公司 培训部经理 吴禹德</h5></dt>
+      <dd>
+        上海工商职业技术学院机电工程系《机电控制技术综合应用》课程，教学设备先进，符合企业实际需要。专业教师水平高、大多有实际工程经验 。该校每年都有30-60名毕业生来我公司就业，这些学生对机电控制岗位很熟悉，上手快、并能适应企业不同的工作岗位；有部分学生经过企业的岗位再训练，已经进入了开发部门工作。
+      </dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>校内督导评价（上海工商职业技术学院科研督导处）(摘要)</p>
+    <div class="container-fluid">
+      <dd>《机电控制技术综合应用》课程组教师教学能力强，教学经验丰富，教学特色鲜明，教学改革有创意，教学内容新颖，有底蕴；能及时把教改教研成果和学科最新发现成果引入教学。该课程结合高职教学特点与职业教学规律，施行“教学做一体”的教学模式，经多年实践，培养效果良好，已在学院全面推行。<br>
+      课程组教学效果好，评价为优秀。
+      </dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>学生评价(摘要)</p>
+    <div class="container-fluid">
+      <dd>校内学生评教指标和校内管理部门提供的近三年的学生评价列全校前列。<br>8-2课程认可度（围绕评审标准中的课程成效要求）<br>12、13、14、15四年来我院机电类专业毕业生的一次签协率95%以上，就业率100%，深受用人单位的欢迎。<br>2014年以来，机电一体化技术专业学生在上海市一类竞赛中成绩与高级职业资格证书获取率均比往年有大幅提升。<br>关键是对于学生就业质量有更显著变化。2015年，上汽集团下属企业鉴于本专业学生机电控制技术方面在校期间就具备了较扎实的基础知识与较强的动手能力，经企业考核后录用了60名本专业学生。
+      </dd>
+    </div>
+
+  </dl>
+</div>
