--- a/app/views/courses/5/_teach_method.html.erb
+++ b/app/views/courses/5/_teach_method.html.erb
@@ -1,1 +1,50 @@
-暂无材料
+<span class="btn btn-primary by-btn-bg"><strong>教学模式的设计与创新</strong></span>
+<br><br>
+<div class="contrainer-fluid course-content-method-div">
+  在教学模式的设计与创新中坚持“能力为本，实践领先，学练交替，重在综合”的理念。设计基于工作过程的项目课程教学等教学模式，采用了“教学做一体”、“拓展专项技能，培养综合素质”等多种与之相适应的教学方法和手段，将理论和实践、课堂和实训室、学校和企业紧密地结合在一起，以实现“零距离”上岗的目的。
+  <p style="margin-bottom:20px">
+    （1）集中式的“教、学、做”一体化教学模式<br>
+充分利用学院已有的3套KUKA工业机器人、6套新时达工业机器人、8套教学型光机电一体化生产线、2套模拟电梯实梯实训装置、3套机电一体化设备维修装置以及多媒体设备，使教学与实践紧密结合，在传授过必要的基础知识后，老师边讲解、边演示，学生边学习、边实践、边提问，使学生在“教、学、做”一体的教学环境下，较快理解自动生产线的工作原理，加强了技术应用能力的培养，较好地培养了学生机电一体化控制设备的安装、调试、故障排除及开发能力。原来在教室讲解总有较大部分的学生掌握不好，在实训基地学练一体的教学方式下，较好地符合了高职学生的认知规律，教学效果明显提高。
+  </p>
+  <p style="margin-bottom:20px">
+    （2） 课内课外、校内校外、理论实践“三位一体”，理论与实践紧密结合<br>
+本课程的主要合作企业上海汽车集团培训中心、上海新时达机器人公司、上海汽车变速器有限公司、上海天灵开关厂使用了大量的机电一体化设备与各种生产线。本课程的教学过程中充分利用合作企业的资源，把部分教学内容放到生产线的生产和使用现场，如在上汽变速器公司齿轮厂制造车间由企业技术人员指导学生学习机电一体化设备的操作、安装、调试等，以及生产线的运行、维护、维修等技能，同时提升学生的职业素养。机电系与上汽集团联合组建的“上汽班”59名学生在上汽集团培训中心接受完全模拟企业真实生产环境的培训。
+  </p>
+  <p style="margin-bottom:20px">
+    （3）与行业知名企业联合组建“订单班”，使教学培养目标更加具有针对性<br>
+我院校企合作企业均使用了较多先进的机电一体化设备与生产线，需要大量的设备安装、调试、运行、维修、维护等高技能人才，我们和上海汽车变速器有限公司联合举办了“上汽变速器订单班”，与上海汽车集团联合举办了“上汽班”，取得了很好的效果，基本实现了“零距离”上岗或经过短期培训即可上岗，较好地满足了企业的需求。
+  </p>
+</div>
+<span class="btn btn-primary by-btn-bg"><strong>教学中信息多元化设计</strong></span>
+<br><br>
+<div class="contrainer-fluid course-content-method-div">
+  <dl>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程充分运用现代教育技术和各种教学手段，提高了教学效果。</dd>
+    <dt style="color:#5086C5">(1)现代教育技术</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;课程采用多层次，立体化的现代教育技术，课堂教学全程采用现场教学、多媒体教学和网络教学，突出教学重点，分解教学难度，形象生动，教学效果好。</dd>
+    <dt style="color:#5086C5">(2)开放实践基地</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;课程授课在实训室进行，学生通过看教师演示，自己动手实践，教学作业在实训室完成，对学习中碰到的问题，学生可在业余时间到实训室实践，使课程学习起到事半功倍的作用。
+    </dd>
+    <dt style="color:#5086C5">(3)提供丰富的技术资料</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学校提供维普、万方数据资源和各种工具书供学生学习参考；教师给学生提供十几个与工控技术有关的网站和论坛地址。要求学生在学习中碰到问题，通过查找上述资源或工具书去解决问题，培养学生独立处理问题的能力。</dd>
+    <dt style="color:#5086C5">(4)课程教学资源网站</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;《机电控制技术综合应用》精品课程网站，也是一个课程教学网站，是一个在线学习系统，它不但包含申报精品课程要求的教学大纲、教学计划、电子教案、电子教材等教学基本文件，让学生知道本课程的教学要求、教学进程，便于学生自主学习，提高学生学习的针对性和目的性；还包含了大量的课程教学资料和PLC技术相关的最新技术资料，学生可在网络上学习、做作业、提问和交流及线考试，开阔了学生的眼界，提高学生自主学习的能力，满足学生的在线学习要求。</dd>
+    <dt style="color:#5086C5">(5)积极拓展第二课堂，培养学生研究性和创新性的学习能力</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;对于学习兴趣高、成绩良好的同学，积极引导他们参加到双休日工程、新技术讲座、各类考证、各类竞赛或创新设计小组等活动，在教师指导下，跟踪机电一体化新技术发展动态，选择自己感兴趣的方面进行深入研究，通过备战各类大赛、各类考证等方式，积极培养学生研究性和创新性学习能力。</dd>
+  </dl>
+</div>
+
+<span class="btn btn-primary by-btn-bg"><strong>现代信息技术手段的应用</strong></span>
+<br><br>
+<div class="contrainer-fluid course-content-method-div">
+  <dl>
+    <dd> 以学生自主学习为中心，开发、整合和利用网络教学资源。学院于2013年秋季建设了CRP平台，网络教学资源陆续完善<dd>
+    <dt style="color:#5086C5">(1)教学文件</dt>
+    <dd>教学大纲、教学计划、授课计划、教学方案设计、电子教案、教材等教学文件均上网。</dd>
+    <dt style="color:#5086C5">（2）教学辅助材料</dt>
+    <dd>实训指导资料、案例集、技术资料、练习题库、试题样卷、技能考核、评分标准、作业辅导等相关资料，真正做以生为本，满足高技能型人才培养的需要。
+    </dd>
+    <dt style="color:#5086C5">（3）移动互联网应用</dt>
+    <dd>与大唐邦彦公司合作开发该课程的移动端互动学习平台。</dd>
+  </dl>
+</div>
