--- a/app/views/courses/5/_course_data.html.erb
+++ b/app/views/courses/5/_course_data.html.erb
@@ -1,5 +1,13 @@
-<%= content_for :script do %>
-  <%= javascript_include_tag  "modal_pdf", 'data-turbolinks-track' => false %>
-<%end%>
-
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
+<ul class="container-fluid">
+  <li class="col-sm-12">
+    <a href="/pdfs/5/course5.pdf" data-toggle="modal" data-target="#myModal2" class="view-pdf" id="course5">
+      <div class="col-sm-10">上海市高职高专院校市级精品课程申报表</div>
+      <div class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</div>
+    </a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">说课视频</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;预览</a>
+  </li>
+</ul>
