change img type

--- a/app/views/courses/5/_course_policy.html.erb
+++ b/app/views/courses/5/_course_policy.html.erb
@@ -17,16 +17,16 @@
          <!-- 轮播（Carousel）项目 -->
          <div class="carousel-inner">
             <div class="item active">
-               <%= image_tag("course_5/course5_1.jpeg") %>
+               <%= image_tag("course_5/course5_1.jpg") %>
             </div>
             <div class="item">
-               <%= image_tag("course_5/course5_2.jpeg") %>
+               <%= image_tag("course_5/course5_2.jpg") %>
             </div>
             <div class="item">
-               <%= image_tag("course_5/course5_6.jpeg") %>
+               <%= image_tag("course_5/course5_6.jpg") %>
             </div>
             <div class="item">
-               <%= image_tag("course_5/course5_8.jpeg") %>
+               <%= image_tag("course_5/course5_8.jpg") %>
             </div>
          </div>
       </div>
@@ -69,7 +69,7 @@
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col-sm-6">
-          <%= image_tag("course_5/course5_3.jpeg",width:"510", height:"350")%><br><br>
+          <%= image_tag("course_5/course5_3.jpg",width:"510", height:"350")%><br><br>
         图（一）<br><br>
         </div>
         <div class="col-sm-6">
