change img sequence

--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -44,7 +44,7 @@
 	<div class="form-group">
 		<%= f.label :image, '课程展示图', class: 'col-sm-2 control-label' %>
 		<div class="col-sm-4 container">
-			<%= f.file_field :image, required: true %>
+			<%= f.file_field :image %>
 		</div>
 	</div>
 
