--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -56,9 +56,10 @@
 	      <p class="title">工作简历</p>
 	      <p class="line"></p>
 		  </div>
-		  <ul>
+		  <ul class="teacher-resume">
 		  	<li class="width-100">
-		  		<%= @teacher.resume %>
+		  		石的黑是对方就会风骚譬如说师傅好伐萨哈额偶尔接我发呢娃儿卡覅额覅为空号IE刷说法叫客服物价局埃尔违法和拉风诶奥尔恩爱诶啊哦咖啡壶姐姐诶我会回归ueoafah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳ah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳ah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳ah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳ah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳ah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳ah二月啊服务IE句我们不一样的样是不会也很高丢个高速四十对贵阳
+		  		<%#= @teacher.resume %>
 		  	</li>
 		  </ul>
 		</div>
